fix navbar reponsive on small screen

--- a/src/app/features/movies/movie-detail/movie-detail.component.scss
+++ b/src/app/features/movies/movie-detail/movie-detail.component.scss
@@ -86,11 +86,11 @@
   line-height: 1.2;
   
   @media (max-width: 991px) {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   
   @media (max-width: 767px) {
-    font-size: 2rem;
+    font-size: 1.2rem;
   }
 }
 
